@@ -11,6 +11,8 @@ Version 3.21.5  [DEVEL] (rgerhards), 2008-09-??
   each input module (else it is blank).
 - added system property "$myhostname", which contains the name of the
   local host as it knows itself.
+- re-enabled gcc builtin atomic operations and added a proper
+  ./configure check
 ---------------------------------------------------------------------------
 Version 3.21.4  [DEVEL] (rgerhards), 2008-09-04
 - removed compile time fixed message size limit (was 2K), limit can now
